--- a/src/app/songs/pages/form-page/form-page.component.html
+++ b/src/app/songs/pages/form-page/form-page.component.html
@@ -6,7 +6,7 @@
   </h3>
   <button
     class="bg-primary text-dark py-2 px-4 rounded hover:bg-primary-dark transition duration-300"
-    (click)="onCancel()"
+    (click)="navigateBack()"
   >
     <span translate>CANCEL</span>
   </button>
@@ -31,14 +31,14 @@
       />
       <div
         *ngIf="form.get('title')?.invalid && form.get('title')?.touched"
-        class="text-red-600 text-sm"
+        class="text-red-600 text-sm mt-1"
       >
         {{ "TITLE_REQUIRED" | translate }}
       </div>
     </div>
 
     <!-- Artistas -->
-    <div class="relative">
+    <div class="relative" #artistDropdown>
       <label class="block text-sm font-medium text-gray-700" translate
         >ARTIST</label
       >
@@ -73,7 +73,7 @@
             <div
               *ngIf="!selectedArtists.includes(artist.id)"
               class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center cursor-pointer"
-              (click)="addSelectedArtist(artist.id)"
+              (click)="selectArtist(artist.id)"
             >
               {{ artist.name }}
               <svg
@@ -94,6 +94,12 @@
           </ng-container>
         </div>
       </div>
+      <div
+        *ngIf="form.get('artist')?.invalid && form.get('artist')?.touched"
+        class="text-red-600 text-sm mt-1"
+      >
+        {{ "ARTIST_REQUIRED" | translate }}
+      </div>
     </div>
 
     <!-- Artistas seleccionados -->
@@ -102,32 +108,33 @@
         >SELECTED_ARTISTS</label
       >
       <div class="flex flex-wrap gap-2 mt-2">
-        <span
-          *ngFor="let selectedArtistId of selectedArtists"
-          class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center"
-        >
-          {{ getArtistName(selectedArtistId) | async }}
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4 ml-2 cursor-pointer"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            (click)="removeSelectedArtist(selectedArtistId)"
+        <ng-container *ngFor="let selectedArtistId of selectedArtists">
+          <span
+            class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center"
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M6 18L18 6M6 6l12 12"
-            />
-          </svg>
-        </span>
+            {{ getArtistName(selectedArtistId) | async }}
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-4 w-4 ml-2 cursor-pointer"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              (click)="removeSelectedArtist(selectedArtistId)"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg>
+          </span>
+        </ng-container>
       </div>
     </div>
 
     <!-- Género -->
-    <div class="relative">
+    <div class="relative" #genreDropdown>
       <label class="block text-sm font-medium text-gray-700" translate
         >GENRE</label
       >
@@ -138,7 +145,6 @@
         placeholder="Seleccionar género"
         (click)="toggleGenreDropdown()"
       />
-
       <div
         *ngIf="showGenreDropdown"
         class="absolute mt-1 w-full rounded-md border border-gray-300 bg-white shadow-lg z-10"
@@ -148,7 +154,7 @@
             <div
               *ngIf="!selectedGenres.includes(genre)"
               class="bg-primary px-3 py-1 rounded-full text-dark text-xs flex items-center cursor-pointer"
-              (click)="addSelectedGenre(genre)"
+              (click)="selectGenre(genre)"
             >
               {{ genre }}
               <svg
@@ -169,9 +175,15 @@
           </ng-container>
         </div>
       </div>
+      <div
+        *ngIf="form.get('genre')?.invalid && form.get('genre')?.touched"
+        class="text-red-600 text-sm mt-1"
+      >
+        {{ "GENRE_REQUIRED" | translate }}
+      </div>
     </div>
 
-    <!-- Generos seleccionados -->
+    <!-- Géneros seleccionados -->
     <div *ngIf="selectedGenres.length > 0" class="mt-4">
       <label class="block text-sm font-medium text-gray-700" translate
         >SELECTED_GENRES</label
@@ -202,37 +214,47 @@
     </div>
 
     <!-- País -->
-    <div class="relative">
-      <label
-        for="country"
-        class="block text-sm font-medium text-gray-700"
-        translate
+    <div class="relative" #countryDropdown>
+      <label class="block text-sm font-medium text-gray-700" translate
         >COUNTRY</label
       >
       <div
         class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus-within:border-primary focus:ring focus:ring-primary focus:ring-opacity-50 cursor-pointer relative"
-        (click)="toggleDropdown()"
+        (click)="toggleDropdown('country')"
       >
         <div class="pl-3 pr-10 py-2 bg-white text-gray-700">
-          {{ selectCountry || ('SELECT_COUNTRY' | translate) }}
+          {{ selectedCountry || ("SELECT_COUNTRY" | translate) }}
         </div>
-        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-          <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+        <div
+          class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
+        >
+          <svg
+            class="fill-current h-4 w-4"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+          >
             <path d="M5.5 7l5 5 5-5H5.5z" />
           </svg>
         </div>
-        <div *ngIf="showDropdown" class="absolute z-10 w-full bg-white rounded-md shadow-lg mt-1 max-h-60 overflow-auto">
-          <a *ngFor="let country of countries" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" (click)="selectCountry(country)">{{ country | translate }}</a>
+        <div
+          *ngIf="showDropdown"
+          class="absolute z-10 w-full bg-white rounded-md shadow-lg mt-1 max-h-60 overflow-auto"
+        >
+          <a
+            *ngFor="let country of countries"
+            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+            (click)="selectCountry(country)"
+            >{{ country | translate }}</a
+          >
         </div>
       </div>
       <div
         *ngIf="form.get('country')?.invalid && form.get('country')?.touched"
-        class="text-red-600 text-sm"
+        class="text-red-600 text-sm mt-1"
       >
         {{ "COUNTRY_REQUIRED" | translate }}
       </div>
     </div>
-
 
     <!-- Año -->
     <div>
@@ -249,6 +271,12 @@
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
         placeholder="{{ 'ENTER_YEAR' | translate }}"
       />
+      <div
+        *ngIf="form.get('year')?.invalid && form.get('year')?.touched"
+        class="text-red-600 text-sm mt-1"
+      >
+        {{ "YEAR_REQUIRED" | translate }}
+      </div>
     </div>
 
     <!-- Puntuación -->
@@ -266,9 +294,15 @@
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
         placeholder="{{ 'ENTER_RATING' | translate }}"
       />
+      <div
+        *ngIf="form.get('rating')?.invalid && form.get('rating')?.touched"
+        class="text-red-600 text-sm mt-1"
+      >
+        {{ "RATING_REQUIRED" | translate }}
+      </div>
     </div>
 
-    <!-- duration -->
+    <!-- Duración -->
     <div>
       <label
         for="duration"
@@ -283,6 +317,12 @@
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring focus:ring-primary focus:ring-opacity-50"
         placeholder="{{ 'ADD_DURATION' | translate }}"
       />
+      <div
+        *ngIf="form.get('duration')?.invalid && form.get('duration')?.touched"
+        class="text-red-600 text-sm mt-1"
+      >
+        {{ "DURATION_REQUIRED" | translate }}
+      </div>
     </div>
 
     <!-- Campo de URL de imagen -->
