--- a/src/app/shared/layout-page/layout-page.component.html
+++ b/src/app/shared/layout-page/layout-page.component.html
@@ -1,100 +1,44 @@
 <div class="flex flex-col min-h-screen bg-background">
   <!-- Cabecera -->
-  <div class="flex items-center justify-between p-4 bg-dark lg:px-16">
+  <header class="bg-dark text-white px-4 py-3 flex items-center justify-between lg:px-16">
+    <!-- Botón del Sidebar -->
+    <button class="block lg:hidden" (click)="toggleSidebar()">
+      <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+      </svg>
+    </button>
+    <!-- Logo -->
     <div class="flex items-center">
-      <!-- Botón del Sidebar -->
-      <button class="text-white mr-3 lg:hidden" (click)="toggleSidebar()">
-        <svg
-          class="h-10 w-10"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M4 6h16M4 12h16m-7 6h7"
-          />
-        </svg>
-      </button>
-      <!-- Logo -->
-      <img
-        src="assets/images/logo.png"
-        alt="Sequence Music Logo"
-        class="h-10 w-auto"
-      />
-      <h3 class="text-primary mt-1 ml-2 hidden lg:block">| MUSIC</h3>
+      <img src="assets/images/logo.png" alt="Sequence Music Logo" class="h-8 lg:h-10 w-auto">
+      <h3 class="text-primary ml-2 hidden lg:block">| MUSIC</h3>
     </div>
     <!-- Menú a la derecha del icono en ordenadores -->
-    <div class="hidden lg:flex items-center justify-end space-x-4">
+    <nav class="hidden lg:flex items-center space-x-4">
       <!-- Menú -->
       <ul class="flex space-x-4">
-        <li>
-          <a routerLink="/songs" routerLinkActive="font-bold" class="text-white"
-            >Canciones</a
-          >
-        </li>
-        <li>
-          <a
-            routerLink="/artists"
-            routerLinkActive="font-bold"
-            class="text-white"
-            >Artistas</a
-          >
-        </li>
-        <li>
-          <a
-            routerLink="/companies"
-            routerLinkActive="font-bold"
-            class="text-white"
-            >Compañías</a
-          >
-        </li>
+        <li><a routerLink="/songs" routerLinkActive="font-bold">Canciones</a></li>
+        <li><a routerLink="/artists" routerLinkActive="font-bold">Artistas</a></li>
+        <li><a routerLink="/companies" routerLinkActive="font-bold">Compañías</a></li>
       </ul>
-
-      <!-- Banderas y separador -->
-      <div class="flex items-center">
+      <!-- Banderas -->
+      <div class="flex items-center space-x-2">
         <!-- Bandera de España -->
-        <div class="relative">
-          <img
-            src="/assets/images/es-flag.png"
-            alt="Bandera de España"
-            (click)="changeLanguage('es')"
-            class="h-6 cursor-pointer"
-          />
-        </div>
-
-        <!-- Separador -->
-        <span class="mx-2 text-white text-xl">|</span>
-        <!-- Barra separadora -->
-
+        <img src="/assets/images/es-flag.png" alt="Bandera de España" (click)="changeLanguage('es')" class="h-6 cursor-pointer">
         <!-- Bandera de Estados Unidos -->
-        <div class="relative">
-          <img
-            src="/assets/images/us-flag.png"
-            alt="Bandera de Estados Unidos"
-            (click)="changeLanguage('us')"
-            class="h-6 cursor-pointer"
-          />
-        </div>
+        <img src="/assets/images/us-flag.png" alt="Bandera de Estados Unidos" (click)="changeLanguage('us')" class="h-6 cursor-pointer">
       </div>
-    </div>
-  </div>
+    </nav>
+  </header>
 
   <!-- Sidebar -->
-  <div
-    class="fixed inset-y-0 left-0 w-80 bg-white transform transition-transform duration-300 ease-in-out z-20"
-    [ngClass]="showSidebar ? 'translate-x-0' : '-translate-x-full'"
-  >
+  <div class="fixed inset-y-0 left-0 w-80 bg-white transform transition-transform duration-300 ease-in-out z-20" [ngClass]="showSidebar ? 'translate-x-0' : '-translate-x-full'">
     <shared-sidebar (close)="toggleSidebar()"></shared-sidebar>
   </div>
 
   <!-- Contenido principal -->
-  <div class="flex-1 p-4 md:px-8 lg:px-16">
+  <main class="flex-1 px-4 py-8 md:px-8 lg:px-16">
     <router-outlet></router-outlet>
-  </div>
+  </main>
 
   <!-- Loader -->
   <shared-loader *ngIf="isLoading"></shared-loader>
