--- a/src/app/songs/pages/detail-page/detail-page.component.html
+++ b/src/app/songs/pages/detail-page/detail-page.component.html
@@ -1,51 +1,138 @@
-<div class="min-h-screen p-4 md:p-8 bg-background">
+<div class="bg-background">
   <div class="flex items-center justify-between mb-8">
-    <h2 class="text-2xl md:text-3xl font-bold text-primary-dark">{{ 'TITLE' | translate }}</h2>
+    <h3 class="text-headline font-bold mb-4 md:mb-0">
+      {{ "TITLE" | translate }}
+    </h3>
     <button
-      class="flex items-center justify-center bg-primary text-white py-2 px-4 rounded-lg shadow hover:bg-primary-dark transition duration-300"
+      class="hidden md:flex bg-primary py-2 px-4 rounded hover:bg-primary-dark transition duration-300 shadow-md"
       (click)="navigateBack()"
+      translate
+      aria-label="BACK_BUTTON"
     >
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-      </svg>
-      {{ 'BACK_BUTTON' | translate }}
+      {{ "BACK_BUTTON" | translate }}
     </button>
   </div>
 
   <ng-container *ngIf="song$ | async as song">
-    <div class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300">
-      <div class="lg:flex">
-        <div class="lg:w-1/2">
-          <img [src]="song.poster" alt="{{ song.title }}" class="object-cover w-full h-64 lg:h-full" />
+    <div
+      class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300 lg:flex"
+    >
+      <div class="lg:w-1/4">
+        <img
+          [src]="song.poster"
+          alt="{{ song.title }}"
+          class="object-cover w-full h-48 lg:h-auto rounded-t-lg lg:rounded-none lg:rounded-l-lg"
+        />
+      </div>
+      <div class="p-6 lg:w-1/2 space-y-4">
+        <h3 class="text-2xl lg:text-3xl font-bold mb-2">{{ song.title }}</h3>
+        <div class="flex items-center text-lg">
+          <span class="text-sm md:text-base text-gray-600 mr-3">{{ "RATING" | translate }}:</span>
+          <shared-rating [rating]="song.rating"></shared-rating>
         </div>
-        <div class="p-6 lg:w-1/2">
-          <h3 class="text-2xl font-bold mb-3">{{ song.title }}</h3>
-          <div class="flex items-center mb-4">
-            <span class="text-gray-600 mr-3">{{ 'RATING' | translate }}</span>
-            <shared-rating [rating]="song.rating"></shared-rating>
-          </div>
-          <p class="text-gray-600 mb-2">{{ 'YEAR' | translate }}: <span class="font-semibold">{{ song.year }}</span></p>
-          <p class="text-gray-600 mb-4">{{ 'DURATION' | translate }}: <span class="font-semibold">{{ song.duration }} {{ 'SECONDS' | translate }}</span></p>
-          <p class="text-gray-600 mb-4">
-            <span class="font-semibold">{{ 'GENRES' | translate }}</span>
-            <span *ngFor="let genre of song.genre; let isLast=last" class="mr-1">
-              {{ genre }}<span *ngIf="!isLast">,</span>
-            </span>
-          </p>
-          <div class="flex gap-3">
-            <button
-              class="bg-primary text-white py-2 px-4 rounded-full hover:bg-primary-dark transition duration-300"
-              (click)="navigateToEdit(song.id)"
+        <p class="text-sm md:text-base text-gray-600 mb-2">
+          {{ "YEAR" | translate }}:
+          <span>{{ song.year }}</span>
+        </p>
+        <p class="text-sm md:text-base text-gray-600 mb-2">
+          {{ "DURATION" | translate }}:
+          <span
+            >{{ song.duration }} {{ "SECONDS" | translate }}</span
+          >
+        </p>
+        <p class="text-sm md:text-base text-gray-600 mb-2">
+          <span>{{ "GENRES" | translate }} </span>
+          <span class="space-x-1">
+            <ng-container *ngFor="let genre of song.genre; let isLast = last">
+              <span>{{ genre }}</span
+              ><span *ngIf="!isLast">,</span>
+            </ng-container>
+          </span>
+        </p>
+        <!-- Botones estándar para escritorio -->
+        <div class="hidden md:flex gap-3">
+          <button
+            class="bg-primary text-white py-2 px-4 rounded-full hover:bg-primary-dark transition duration-300"
+            (click)="navigateToEdit(song.id!)"
+          >
+            {{ "EDIT_BUTTON" | translate }}
+          </button>
+          <button
+            class="bg-danger text-dark py-2 px-4 rounded-full hover:bg-danger-dark transition duration-300 border border-danger-dark"
+            (click)="onDelete(song)"
+          >
+            {{ "DELETE_BUTTON" | translate }}
+          </button>
+        </div>
+
+        <!-- Botones flotantes para móviles y tabletas -->
+        <div
+          class="fixed bottom-5 left-5 flex flex-row items-end space-y-2 md:hidden"
+        >
+          <button
+            class="bg-primary text-dark p-3 rounded-full shadow-lg hover:bg-primary-dark transition duration-300 z-10"
+            (click)="navigateBack()"
+          >
+            <!-- Ícono de eliminar, ajusta según tus íconos disponibles -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
             >
-              {{ 'EDIT_BUTTON' | translate }}
-            </button>
-            <button
-              class="bg-danger text-dark py-2 px-4 rounded-full hover:bg-danger-dark transition duration-300 border border-danger-dark"
-              (click)="onDelete(song)"
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.75 19.5 8.25 12l7.5-7.5"
+              />
+            </svg>
+          </button>
+        </div>
+        <div
+          class="fixed bottom-5 right-5 flex flex-row items-end space-y-2 md:hidden"
+        >
+          <button
+            class="bg-danger text-dark p-3 rounded-full shadow-lg hover:bg-danger-dark transition duration-300 z-10 mr-2"
+            (click)="onDelete(song)"
+          >
+            <!-- Ícono de eliminar, ajusta según tus íconos disponibles -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
             >
-              {{ 'DELETE_BUTTON' | translate }}
-            </button>
-          </div>
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+              />
+            </svg>
+          </button>
+          <button
+            class="bg-primary text-dark p-3 rounded-full shadow-lg hover:bg-primary-dark transition duration-300"
+            (click)="navigateToEdit(song.id!)"
+          >
+            <!-- Ícono de editar, ajusta según tus íconos disponibles -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"
+              />
+            </svg>
+          </button>
         </div>
       </div>
     </div>
